--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 node_modules/
-data.json
-index.js
+*/data.json
+*/index.js
 .dist/
-package-lock.json
-package.json
-BloodCountCapstoneUser.rar
-BloodCountCapstoneAdmin.rar
-BloodCountCapstoneFinalReport.pdf
-Presentation.pptx
+*/package-lock.json
+*/package.json
+*/BloodCountCapstoneUser.rar
+*/BloodCountCapstoneAdmin.rar
+*/BloodCountCapstoneFinalReport.pdf
+*/Presentation.pptx
