--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-node_modules/
-*/data.json
-*/index.js
-.dist/
-*/package-lock.json
-*/package.json
-*/BloodCountCapstoneUser.rar
-*/BloodCountCapstoneAdmin.rar
-*/BloodCountCapstoneFinalReport.pdf
-*/Presentation.pptx
 new.text
+Presentation.pptx
