--- a/BloodCountCapstoneUser/BloodCountUser/package.json
+++ b/BloodCountCapstoneUser/BloodCountUser/package.json
@@ -6,10 +6,16 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "preset": "jest-expo"
+  },
+  "homepage": "https://ravireddy07.github.io/BloodCount_Capstone",
+  "devDependencies": {
+    "gh-pages": "^1.0.0",
+    "react-scripts": "^1.0.13"
   },
   "dependencies": {
     "@expo/samples": "~3.0.3",
